@@ -5,7 +5,6 @@ import static seedu.address.logic.Messages.MESSAGE_INVALID_COMMAND_FORMAT;
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseFailure;
 import static seedu.address.logic.parser.CommandParserTestUtil.assertParseSuccess;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -15,35 +14,34 @@ import seedu.address.model.person.PersonMatchesKeywordsPredicate;
 
 public class FindCommandParserTest {
 
-    private FindCommandParser parser = new FindCommandParser();
+    private final FindCommandParser parser = new FindCommandParser();
 
     @Test
     public void parse_emptyArg_throwsParseException() {
-        assertParseFailure(parser, "     ", String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
+        assertParseFailure(parser, "     ",
+                String.format(MESSAGE_INVALID_COMMAND_FORMAT, FindCommand.MESSAGE_USAGE));
     }
 
     @Test
     public void parse_validGlobalArgs_returnsFindCommand() {
-        // no leading and trailing whitespaces
         FindCommand expectedFindCommand = new FindCommand(new PersonMatchesKeywordsPredicate(
-                Arrays.asList("Alice", "Bob"), // global
+                List.of("Alice Bob"),
                 List.of(),
                 List.of(),
                 List.of()));
-        assertParseSuccess(parser, "Alice Bob", expectedFindCommand);
 
-        // multiple whitespaces between keywords
-        assertParseSuccess(parser, " \n Alice \n \t Bob  \t", expectedFindCommand);
+        assertParseSuccess(parser, "Alice Bob", expectedFindCommand);
+        assertParseSuccess(parser, "  Alice   Bob  ", expectedFindCommand);
     }
 
     @Test
     public void parse_namePrefix_returnsFindCommand() {
         FindCommand expected = new FindCommand(
                 new PersonMatchesKeywordsPredicate(
-                    List.of(),
-                    List.of("Alice"),
-                    List.of(),
-                    List.of()));
+                        List.of(),
+                        List.of("Alice"),
+                        List.of(),
+                        List.of()));
 
         assertParseSuccess(parser, " n/Alice", expected);
         assertParseSuccess(parser, " n/ Alice", expected);
@@ -153,5 +151,4 @@ public class FindCommandParserTest {
         assertParseFailure(parser, " p/1234 n/   ",
                 String.format(MESSAGE_BLANK_FIND_FIELD_INPUT, FindCommand.MESSAGE_USAGE));
     }
-
 }
